[package]
name = "cw3-fixed-multisig"
version = "0.10.0-soon4"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implementing cw3 with an fixed group multisig"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.10.0-soon4" }
cw2 = { path = "../../packages/cw2", version = "0.10.0-soon4" }
cw3 = { path = "../../packages/cw3", version = "0.10.0-soon4" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.10.0-soon4" }
cosmwasm-std = { version = "1.0.0-beta" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta" }
cw20 = { path = "../../packages/cw20", version = "0.10.0-soon4" }
cw20-base = { path = "../cw20-base", version = "0.10.0-soon4", features = ["library"] }
cw-multi-test = { path = "../../packages/multi-test", version = "0.10.0-soon4" }
