[package]
name = "cw3-flex-multisig"
version = "0.14.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Implementing cw3 with multiple voting patterns and dynamic groups"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw-utils = { path = "../../packages/utils", version = "0.14.0" }
cw2 = { path = "../../packages/cw2", version = "0.14.0" }
cw3 = { path = "../../packages/cw3", version = "0.14.0" }
cw3-fixed-multisig = { path = "../cw3-fixed-multisig", version = "0.14.0", features = ["library"] }
cw4 = { path = "../../packages/cw4", version = "0.14.0" }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.14.0" }
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0" }
cw4-group = { path = "../cw4-group", version = "0.14.0" }
cw-multi-test = { path = "../../packages/multi-test", version = "0.14.0" }
