[package]
name = "cw721-base"
version = "0.2.1"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
cosmwasm-std = { version = "0.10.1" }
cosmwasm-storage = { version = "0.10.1", features = ["iterator"] }
cw2 = { path = "../../packages/cw2", version = "0.2.1" }
cw721 = { path = "../../packages/cw721", version = "0.2.1" }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
snafu = { version = "0.6.3" }

[dev-dependencies]
cosmwasm-schema = { version = "0.10.1" }
