[package]
name = "cw721-metadata-uri"
version = "0.9.0"
authors = ["Ethan Frey <ethanfrey@users.noreply.github.com>"]
edition = "2018"
description = "Example extending CW721 NFT with ERC20 like metadata_uri"
license = "Apache-2.0"
repository = "https://github.com/CosmWasm/cw-plus"
homepage = "https://cosmwasm.com"
documentation = "https://docs.cosmwasm.com"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.10.0-soon2" }
cw2 = { path = "../../packages/cw2", version = "0.10.0-soon2" }
cw721 = { path = "../../packages/cw721", version = "0.10.0-soon2" }
cw721-base = { path = "../cw721-base", version = "0.10.0-soon2", features = ["library"] }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.10.0-soon2" }
cosmwasm-std = { version = "1.0.0-soon" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-soon" }
